--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/carsharing?useSSL=false&server
 spring.datasource.username=root
 spring.datasource.password=k51233215
 
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
